--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewDisplayItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewDisplayItemInfo.scss
@@ -33,6 +33,7 @@
 		position: relative;
 		display: inline-block;
 		margin-left: v.$display-item-field-margin-left;
+		border-radius: v.$status-box-border-radius;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to a status-box.
 		// ...the scss for the colors assigned are in home.scss
