--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -100,7 +100,6 @@
 
 	.list-table__data--completed-color {
 		color: v.$status-green;
-		//font-weight: bold;
 	}
 
 	.list-table__data__info__completed-icon {
@@ -121,6 +120,7 @@
 	.list-table__data__centering-container__status-box {
 		@include m.dead-center();
 
+		border-radius: v.$status-box-border-radius;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to a status-box.
 		// ...the scss for the colors assigned are in home.scss
