--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -68,6 +68,7 @@
 		position: relative;
 		margin: 10px;
 		border: 2px solid black;
+		border-radius: 25px;
 		background-color: v.$light-gray-level-5;
 		padding: 0px 20px 20px 20px;
 		overflow-wrap: anywhere;
@@ -143,7 +144,7 @@
 
 		outline: none;
 		margin-bottom: 10px;
-		border: 2px solid black;
+		border: 1px solid black;
 		border-radius: v.$form-input-border-radius;
 		background-color: white;
 		padding: 4px 8px 4px 8px;
