--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableSortArrowsButton.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableSortArrowsButton.scss
@@ -1,8 +1,7 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-.sort-arrows {
+.sort-arrow {
 	@include m.vertical-center();
-	margin-left: 8px;
 	cursor: pointer;
 }
