--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -68,7 +68,7 @@ $edit-account-modal-height: 480px;
 $search-filter-sort-bar-height: 46px;
 $search-filter-sort-bar-button-height: 28px;
 $list-item-search-bar-height: 28px;
-$filter-dropdown-content-container-height: 200px;
+$filter-dropdown-content-container-height: 190px;
 $list-item-table-row-height: 50px;
 $status-box-height: 27px;
 $create-item-sidebar-height: 700px;
@@ -88,8 +88,10 @@ $navbar-hamburger-button-width: 36px;
 $account-sidebar-width: 350px;
 $edit-account-modal-width: 460px;
 $list-item-search-bar-button-width: $list-item-search-bar-height + 10;
-$filter-button-width: 90px;
-$filter-dropdown-content-container-width: 280px;
+$search-top-bar-filter-button-width: 90px;
+$search-top-bar-filter-dropdown-content-container-width: 260px;
+$top-bar-sort-button-width: 80px;
+$top-bar-sort-dropdown-content-container-width: 120px;
 $list-table-min-width: 1100px;
 $list-table-item-name-width: 250px;
 $status-box-width: 110px;
@@ -110,6 +112,8 @@ $navbar-breadcrumb-arrow-top: -2px;
 $navbar-breadcrumb-arrow-left: -2px;
 $navbar-hamburger-button-left: 10px;
 $item-search-bar-left: 15px;
+$top-bar-sort-button-left: $item-search-bar-width + ($item-search-bar-left * 2);
+$top-bar-filter-button-left: $top-bar-sort-button-left + $top-bar-sort-button-width + ($item-search-bar-left);
 
 //=========
 // Margins
@@ -119,6 +123,8 @@ $register-login-form-input-margin-bottom: 5px;
 $edit-account-form-input-margin-top: 5px;
 $edit-account-create-item-form-input-margin-bottom: 10px;
 $edit-account-modal-link-margin: 18px;
+$search-top-bar-filter-button-dropdown-title-margin-top: 13px;
+$search-top-bar-filter-button-dropdown-title-margin-on-one-side: 20px;
 $create-item-sidebar-text-input-margin-top: 2px;
 $display-item-field-margin-left: 11px;
 $item-view-item-box-char-counter-margin: 5px 2px 4px 0px;
